@@ -3,6 +3,9 @@
 	* Added set hostname configuration flag to prefix the hostname.
 	* Added set uid_indicator configuration flag to suffix $ or #
 	  depending on whether the user is root or not.
+	* If the parent shell allows it, use PWD to get the current directory,
+	  this allows prwd to grab the context of the parent shell and show
+	  symlinks appropriately.
 
 1.7 Bertrand Janin <b@janin.com> (2013-05-25)
 
